<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/fragment_code_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_marginBottom="8dp"
        android:text="@string/fragment_code_sent_to"
        app:layout_constraintBottom_toTopOf="@+id/otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_error"
        android:drawableStart="@drawable/ic_error"
        android:drawableTint="@color/red"
        android:paddingVertical="4dp"
        android:paddingHorizontal="16dp"
        android:drawablePadding="8dp"
        android:padding="4dp"
        android:text="@string/fragment_invalid_code_otp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/otp"
        app:layout_constraintStart_toStartOf="@+id/otp"
        app:layout_constraintTop_toBottomOf="@+id/otp" />

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorSecondary"
        app:bar_enabled="true"
        app:bar_height="2dp"
        app:height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:length="6"
        app:otp_text_size="24dp"
        app:width="40dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/fragment_code_verify"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>